Refractor to support java 8, and some clean